--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,2 @@
 [tool:pytest]
-addopts = --cov=netgraph --cov-fail-under=85 --cov-report term-missing
+addopts = --cov=ngraph --cov-fail-under=85 --cov-report term-missing
