--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+tests/*no_publish*
 
 # Translations
 *.mo
@@ -133,3 +134,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# other
+tmp/
