--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest pytest-cov pytest-benchmark pytest-mock
+        python -m pip install networkx
         if [ -f requirements.txt ];
           then
           pip install -r requirements.txt;
