Consolidated dev and run environments. Updated run.sh script, Dockerfile, and requirements.txt accordingly

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,15 @@ networkx
 numpy
 pandas
 matplotlib
+build
+twine
+pytest
+pytest-cov
+pytest-benchmark
+pytest-mock
+pylint
+black
+jupyter
+seaborn
+basemap-data-hires
+basemap
