--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -8,23 +8,23 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.13"]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest pytest-cov pytest-benchmark pytest-mock
-        python -m pip install networkx
-        if [ -f requirements.txt ];
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pytest pytest-cov pytest-benchmark pytest-mock
+          python -m pip install networkx
+          if [ -f requirements.txt ];
           then
-          pip install -r requirements.txt;
-        fi
-    - name: Test with pytest and check test coverage
-      run: |
-        pytest --cov=ngraph --cov-fail-under=85
+            pip install -r requirements.txt;
+          fi
+      - name: Test with pytest and check test coverage
+        run: |
+          pytest --cov=ngraph --cov-fail-under=85
