--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ networkx
 numpy
 pandas
 matplotlib
+jupyter
+seaborn
+cartopy
 build
 twine
 pytest
@@ -11,7 +14,3 @@ pytest-benchmark
 pytest-mock
 pylint
 black
-jupyter
-seaborn
-basemap-data-hires
-basemap
