--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,9 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# JuptyerLab
+.virtual_documents/
+
 # IPython
 profile_default/
 ipython_config.py
