--- a/tests/scenarios/scenario_1.yaml
+++ b/tests/scenarios/scenario_1.yaml
@@ -20,86 +20,86 @@ network:
     # West -> Middle
     - source: SEA
       target: DEN
-      capacity: 200
-      latency: 6846
-      cost: 6846
-      attrs:
-        distance_km: 1369.13
+      link_params:
+        capacity: 200
+        cost: 6846
+        attrs:
+          distance_km: 1369.13
 
     - source: SFO
       target: DEN
-      capacity: 200
-      latency: 7754
-      cost: 7754
-      attrs:
-        distance_km: 1550.77
+      link_params:
+        capacity: 200
+        cost: 7754
+        attrs:
+          distance_km: 1550.77
 
     - source: SEA
       target: DFW
-      capacity: 200
-      latency: 9600
-      cost: 9600
-      attrs:
-        distance_km: 1920
+      link_params:
+        capacity: 200
+        cost: 9600
+        attrs:
+          distance_km: 1920
 
     - source: SFO
       target: DFW
-      capacity: 200
-      latency: 10000
-      cost: 10000
-      attrs:
-        distance_km: 2000
+      link_params:
+        capacity: 200
+        cost: 10000
+        attrs:
+          distance_km: 2000
 
     # Middle <-> Middle (two parallel links to represent redundancy)
     - source: DEN
       target: DFW
-      capacity: 400
-      latency: 7102
-      cost: 7102
-      attrs:
-        distance_km: 1420.28
+      link_params:
+        capacity: 400
+        cost: 7102
+        attrs:
+          distance_km: 1420.28
 
     - source: DEN
       target: DFW
-      capacity: 400
-      latency: 7102
-      cost: 7102
-      attrs:
-        distance_km: 1420.28
+      link_params:
+        capacity: 400
+        cost: 7102
+        attrs:
+          distance_km: 1420.28
 
     # Middle -> East
     - source: DEN
       target: JFK
-      capacity: 200
-      latency: 7500
-      cost: 7500
-      attrs:
-        distance_km: 1500
+      link_params:
+        capacity: 200
+        cost: 7500
+        attrs:
+          distance_km: 1500
 
     - source: DFW
       target: DCA
-      capacity: 200
-      latency: 8000
-      cost: 8000
-      attrs:
-        distance_km: 1600
+      link_params:
+        capacity: 200
+        cost: 8000
+        attrs:
+          distance_km: 1600
 
     - source: DFW
       target: JFK
-      capacity: 200
-      latency: 9500
-      cost: 9500
-      attrs:
-        distance_km: 1900
+      link_params:
+        capacity: 200
+        cost: 9500
+        attrs:
+          distance_km: 1900
 
     # East <-> East
     - source: JFK
       target: DCA
-      capacity: 100
-      latency: 1714
-      cost: 1714
-      attrs:
-        distance_km: 342.69
+      link_params:
+        capacity: 100
+        cost: 1714
+        attrs:
+          distance_km: 342.69
 
 failure_policy:
   name: "anySingleLink"
