--- a/tests/scenarios/scenario_3.yaml
+++ b/tests/scenarios/scenario_3.yaml
@@ -39,6 +39,7 @@ blueprints:
         link_params:
           capacity: 2
           cost: 1
+
 network:
   name: "3tier_clos_network"
   version: 1.0
@@ -58,12 +59,14 @@ network:
         capacity: 2
         cost: 1
 
-
 workflow:
   - step_type: BuildGraph
     name: build_graph
+
   - step_type: CapacityProbe
     name: capacity_probe
-    source_path: my_clos1/b
-    sink_path: my_clos2/b
+    source_path: my_clos1/b.*/t1
+    sink_path: my_clos2/b.*/t1
+    mode: combine
+    probe_reverse: True
     shortest_path: True
