--- a/tests/scenarios/scenario_3.yaml
+++ b/tests/scenarios/scenario_3.yaml
@@ -67,36 +67,36 @@ network:
         capacity: 1
         cost: 1
 
-    # Demonstrates setting a shared_risk_group and optic_type on all spine to spine links.
+    # Demonstrates setting a shared_risk_group and hw_component on all spine to spine links.
     - source: .*/spine/.*
       target: .*/spine/.*
       any_direction: True
       link_params:
         attrs:
           shared_risk_group: "SpineSRG"
-          optic_type: "400G-LR4"
+          hw_component: "400G-LR4"
   
   # Example node overrides that assign SRGs and hardware types
   node_overrides:
     - path: my_clos1/b1/t1
       attrs:
         shared_risk_group: "clos1-b1t1-SRG"
-        hw_type: "LeafHW-A"
+        hw_component: "LeafHW-A"
 
     - path: my_clos2/b2/t1
       attrs:
         shared_risk_group: "clos2-b2t1-SRG"
-        hw_type: "LeafHW-B"
+        hw_component: "LeafHW-B"
 
     - path: my_clos1/spine/t3.* 
       attrs:
         shared_risk_group: "clos1-spine-SRG"
-        hw_type: "SpineHW"
+        hw_component: "SpineHW"
 
     - path: my_clos2/spine/t3.*
       attrs:
         shared_risk_group: "clos2-spine-SRG"
-        hw_type: "SpineHW"
+        hw_component: "SpineHW"
 
 workflow:
   - step_type: BuildGraph
