--- a/tests/scenarios/scenario_2.yaml
+++ b/tests/scenarios/scenario_2.yaml
@@ -69,12 +69,14 @@ network:
     #    "SEA/clos_instance" and "SEA/edge_nodes" in the global scope.
     SEA:
       use_blueprint: city_cloud
-      coords: [47.6062, -122.3321]
+      attrs:
+        coords: [47.6062, -122.3321]
 
     # 2) 'SFO' references 'single_node' (one-node blueprint).
     SFO:
       use_blueprint: single_node
-      coords: [37.7749, -122.4194]
+      attrs:
+        coords: [37.7749, -122.4194]
 
   adjacency:
     # Each adjacency definition uses "mesh" in this scenario. Self-loops are automatically skipped.
@@ -117,13 +119,17 @@ network:
   # Standalone nodes
   nodes:
     DEN:
-      coords: [39.7392, -104.9903]
+      attrs:
+        coords: [39.7392, -104.9903]
     DFW:
-      coords: [32.8998, -97.0403]
+      attrs:
+        coords: [32.8998, -97.0403]
     JFK:
-      coords: [40.641766, -73.780968]
+      attrs:
+        coords: [40.641766, -73.780968]
     DCA:
-      coords: [38.907192, -77.036871]
+      attrs:
+        coords: [38.907192, -77.036871]
 
   # Additional direct links
   # Note that each link references existing nodes (e.g., DEN, DFW).
