--- a/tests/scenarios/scenario_1.yaml
+++ b/tests/scenarios/scenario_1.yaml
@@ -4,17 +4,23 @@ network:
 
   nodes:
     SEA:
-      coords: [47.6062, -122.3321]
+      attrs:
+        coords: [47.6062, -122.3321]
     SFO:
-      coords: [37.7749, -122.4194]
+      attrs:
+        coords: [37.7749, -122.4194]
     DEN:
-      coords: [39.7392, -104.9903]
+      attrs:
+        coords: [39.7392, -104.9903]
     DFW:
-      coords: [32.8998, -97.0403]
+      attrs:
+        coords: [32.8998, -97.0403]
     JFK:
-      coords: [40.641766, -73.780968]
+      attrs:
+        coords: [40.641766, -73.780968]
     DCA:
-      coords: [38.907192, -77.036871]
+      attrs:
+        coords: [38.907192, -77.036871]
 
   links:
     # West -> Middle
@@ -102,14 +108,12 @@ network:
           distance_km: 342.69
 
 failure_policy:
-  name: "anySingleLink"
-  description: "Evaluate traffic routing under any single link failure."
+  attrs:
+    name: "anySingleLink"
+    description: "Evaluate traffic routing under any single link failure."
   rules:
-    - conditions:
-        - attr: "type"
-          operator: "=="
-          value: "link"
-      logic: "and"
+    - logic: "any"
+      entity_scope: "link"
       rule_type: "choice"
       count: 1
 
