Add CLI tool with run command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ dev = [
     "black",
     "isort",
 ]
+[project.scripts]
+ngraph = "ngraph.cli:main"
+
 
 # ---------------------------------------------------------------------
 # Pytest flags
