--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -19,12 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest pytest-cov pytest-benchmark pytest-mock
-          python -m pip install networkx
-          if [ -f requirements.txt ];
-          then
-            pip install -r requirements.txt;
-          fi
+          python -m pip install . pytest pytest-cov pytest-benchmark
       - name: Test with pytest and check test coverage
         run: |
           pytest --cov=ngraph --cov-fail-under=85
