--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install . pytest pytest-cov pytest-benchmark
+          python -m pip install '.[dev]'
       - name: Test with pytest and check test coverage
         run: |
-          pytest --cov=ngraph --cov-fail-under=85
+          pytest
