--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: docs
 on:
   push:
     branches: [main]
-    paths-ignore: [.github/**, '*.md']
+    paths-ignore: [.github/**]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,5 +10,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with: {python-version: '3.12'}
-      - run: pip install "mkdocs-material>=9,<10" pdoc
-      - run: mkdocs gh-deploy --force --clean
+      - name: Install dependencies
+        run: pip install "mkdocs-material>=9,<10" pdoc
+      - name: Install package in development mode
+        run: pip install -e .
+      - name: Generate auto-generated API documentation
+        run: python scripts/generate_api_docs.py
+      - name: Deploy documentation
+        run: mkdocs gh-deploy --force --clean
