--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
       - Installation: getting-started/installation.md
       - Tutorial: getting-started/tutorial.md
   - Examples:
-      - Flow Fundamentals: examples/fundamentals.md
+      - Basic Example: examples/basic.md
       - Clos Fabric: examples/clos-fabric.md
   - Reference:
       - DSL: reference/dsl.md
