modified CI workflow, added publish workflow, fixed formatting, improved dev experience

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,25 +1,32 @@
-# Run unit tests and check test coverage
-name: Python-test
+# Run tests, linting, and type checking
+name: CI
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.11", "3.12", "3.13"]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install '.[dev]'
-      - name: Test with pytest and check test coverage
+      - name: Lint with Ruff
+        run: |
+          ruff check .
+          ruff format --check .
+      - name: Type check with Pyright
+        run: |
+          pyright
+      - name: Test with pytest and check coverage
         run: |
           pytest
