--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/setup-python@v5
         with: {python-version: '3.11'}
       - name: Install dependencies
-        run: pip install "mkdocs-material>=9,<10" pdoc
-      - name: Install package in development mode
-        run: pip install -e .
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install '.[dev]'
       - name: Generate auto-generated API documentation
-        run: python scripts/generate_api_docs.py
+        run: python dev/generate_api_docs.py
       - name: Deploy documentation
         run: mkdocs gh-deploy --force --clean
