Update documentation publishing

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,6 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install '.[dev]'
       - name: Generate auto-generated API documentation
-        run: python dev/generate_api_docs.py
+        run: python dev/generate_api_docs.py --write-file
       - name: Deploy documentation
         run: mkdocs gh-deploy --force --clean
