--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
-# MacOS stuff
-.DS_Store
-
-# VSCode stuff
-**/.vscode
-
+# -----------------------------------------------------------------------------
+# Python
+# -----------------------------------------------------------------------------
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
 
 # Distribution / packaging
@@ -32,8 +27,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -41,7 +34,9 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# -----------------------------------------------------------------------------
+# Testing & Coverage
+# -----------------------------------------------------------------------------
 htmlcov/
 .tox/
 .nox/
@@ -56,60 +51,10 @@ coverage.xml
 .pytest_cache/
 tests/*no_publish*
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# JuptyerLab
-.virtual_documents/
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+# -----------------------------------------------------------------------------
+# Development Environments & Tools
+# -----------------------------------------------------------------------------
+# Virtual environments
 .env
 .venv
 env/
@@ -117,27 +62,124 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+ngraph-venv/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Python version management
+.python-version
 
-# Rope project settings
-.ropeproject
+# Package managers
+#Pipfile.lock  # Uncomment if using pipenv
+poetry.lock   # Uncomment if you want to ignore poetry.lock
+__pypackages__/
 
-# mkdocs documentation
-/site
-
-# mypy
+# Type checkers & linters
 .mypy_cache/
 .dmypy.json
 dmypy.json
-
-# Pyre type checker
 .pyre/
+.ruff_cache/
 
-# other
+# -----------------------------------------------------------------------------
+# IDEs & Editors
+# -----------------------------------------------------------------------------
+# VSCode
+**/.vscode
+
+# IntelliJ IDEA
+.idea/
+
+# Vim/Emacs
+*.swp
+*.swo
+*~
+
+# Spyder
+.spyderproject
+.spyproject
+
+# Rope
+.ropeproject
+
+# -----------------------------------------------------------------------------
+# Jupyter Notebooks
+# -----------------------------------------------------------------------------
+.ipynb_checkpoints
+.virtual_documents/
+
+# IPython
+profile_default/
+ipython_config.py
+
+# -----------------------------------------------------------------------------
+# Documentation
+# -----------------------------------------------------------------------------
+# MkDocs
+/site
+
+# Sphinx
+docs/_build/
+
+# -----------------------------------------------------------------------------
+# OS Specific
+# -----------------------------------------------------------------------------
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# -----------------------------------------------------------------------------
+# Private content
+# -----------------------------------------------------------------------------
+private/
+notebooks/private/
+*_private/
+*.private.*
+
+# Data files (to be on the safe side)
+data/
+datasets/
+output/
+results/
+exports/
+*.h5
+*.hdf5
+*.pickle
+*.pkl
+
+# Generated visualizations
+plots/
+figures/
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.svg
+*.pdf
+# Exceptions for documentation
+!docs/**/*.png
+!docs/**/*.jpg
+!docs/**/*.svg
+!README_assets/
+
+# Configuration with secrets
+config.local.*
+.env.local
+.env.*.local
+secrets/
+credentials/
+
+# Temporary analysis
+scratch/
+temp/
+temporary/
+analysis_temp/
 tmp/
 
-# Ignore agent instructions
+# -----------------------------------------------------------------------------
+# Special
+# -----------------------------------------------------------------------------
+# Agent instructions
 AGENTS.md
