--- a/tests/scenarios/scenario_1.yaml
+++ b/tests/scenarios/scenario_1.yaml
@@ -107,15 +107,16 @@ network:
         attrs:
           distance_km: 342.69
 
-failure_policy:
-  attrs:
-    name: "anySingleLink"
-    description: "Evaluate traffic routing under any single link failure."
-  rules:
-    - logic: "any"
-      entity_scope: "link"
-      rule_type: "choice"
-      count: 1
+failure_policy_set:
+  default:
+    attrs:
+      name: "anySingleLink"
+      description: "Evaluate traffic routing under any single link failure."
+    rules:
+      - logic: "any"
+        entity_scope: "link"
+        rule_type: "choice"
+        count: 1
 
 traffic_matrix_set:
   default:
