Implement Notebook Export and Analysis Features
- Added NotebookExport class for exporting scenario results to Jupyter notebooks with external JSON data files.
- Introduced NotebookCodeSerializer for generating notebook cells from analysis classes.
- Created CapacityMatrixAnalyzer and FlowAnalyzer for analyzing capacity and flow data, respectively.
- Implemented SummaryAnalyzer for summarizing analysis results.
- Enhanced DataLoader for loading and validating analysis results from JSON files.
- Added tests for NotebookExport to ensure proper functionality and error handling.
- Updated pyproject.toml to include nbformat as a dependency.
- Improved documentation and comments throughout the code for clarity.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     hooks:
       - id: pyright
         args: [--project, pyproject.toml]
-        additional_dependencies: ['geopy', 'networkx', 'pyyaml', 'numpy', 'pandas', 'matplotlib', 'seaborn']
+        additional_dependencies: ['networkx', 'pyyaml', 'pandas', 'matplotlib', 'seaborn', 'nbformat', 'itables', 'pandas-stubs']
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
