Implement JSON schema validation for NetGraph scenario files. Add validation tests and integrate schema checks into development workflows and CI/CD pipelines. Update documentation to reflect schema usage and limitations.

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Type check with Pyright
         run: |
           pyright
+      - name: Validate YAML schemas
+        run: |
+          make validate
       - name: Test with pytest and check coverage
         run: |
           pytest
