--- a/scenarios/nsfnet.yaml
+++ b/scenarios/nsfnet.yaml
@@ -1,3 +1,7 @@
+# NSFNET T3 (1992) topology scenario
+# Tests realistic backbone network topology with capacity envelope analysis
+seed: 5678
+
 network:
   name: "NSFNET T3 (1992)"
   version: 1.0
@@ -104,7 +108,6 @@ workflow:
     parallelism: 8
     shortest_path: false
     flow_placement: "PROPORTIONAL"
-    seed: 42
     iterations: 100
     baseline: true
     failure_policy: "default"
